# filtering_openmp6.0

./: CMakeLists.txt  README.md  main.cpp
